--- a/Css/style.css
+++ b/Css/style.css
@@ -87,6 +87,53 @@ nav {
     text-align: center;
 }
 
+/* floating babbles */
+.container {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    max-height: 10px;
+    z-index: 1;
+}
+
+.bubbles {
+    position: relative;
+    display: flex;
+    max-height: 10px;
+}
+
+.bubbles span {
+    position: relative;
+    width: 30px;
+    height: 30px;
+    background: #4fc3dc;
+    margin: 0 4px;
+    border-radius: 50%;
+    box-shadow: 0 0 0 10px #4fc3dc44,
+        0 0 50px #4fc3dc,
+        0 0 100px #4fc3dc;
+    animation: animate 15s linear infinite;
+    animation-duration: calc(125s / var(--i));
+}
+
+.bubbles span:nth-child(even) {
+    box-shadow: 0 0 0 10px #ff2d7544,
+        0 0 50px #ff2d75,
+        0 0 100px #ff2d75;
+
+}
+
+@keyframes animate {
+    0% {
+        transform: translateY(100vh) scale(0);
+    }
+
+    100% {
+        transform: translateY(-100vh) scale(1);
+    }
+}
+
 main {
     display: flex;
     flex-direction: column;
@@ -143,12 +190,12 @@ strong {
     /* min-height: 65rem; */
     align-items: center;
     /* justify-content: center;
-    display: flex;
+    display: flex; */
     flex-direction: column;
-    flex-wrap: wrap; */
+    flex-wrap: wrap;
 }
 
-.secondSection ul{
+.secondSection ul {
     background-color: #4fc3dc;
     display: flex;
     gap: 2rem;
@@ -163,11 +210,12 @@ strong {
     text-align: center;
 }
 
+/* Cards-Scond-section */
 .cards-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px; 
-    margin-top: 50px; 
+    gap: 20px;
+    margin-top: 50px;
     justify-content: center;
 }
 
@@ -175,37 +223,36 @@ strong {
     background-color: rgba(249, 249, 249, 0.3);
     border: 1px solid #e0e0e0;
     border-radius: 5px;
-    padding: 15px; 
-    width: 100%; 
-    max-width: 300px; 
-    display: flex; 
-    flex-direction: column; 
-    align-items: center; 
-    text-align: center; 
-    gap: 1rem; 
-    transition: transform 0.3s ease, opacity 0.3s ease; 
-    opacity: 0.6; 
+    padding: 15px;
+    width: 100%;
+    max-width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 1rem;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+    /* opacity: 0.6; */
     cursor: pointer;
 }
 
 .card:hover {
     transform: translateY(20px);
-    opacity: 1; /* Opacidade ao passar o mouse */
+    /* opacity: 1; */
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3)
 }
 
-
-
 .img-card-experience {
-    width: 100px;  
-    height: 100px; 
-    margin-bottom: 1rem; 
+    width: 100px;
+    height: 100px;
+    margin-bottom: 1rem;
 }
 
 .circle {
-    width: 50px; 
-    height: 50px; 
-    border-radius: 50%; 
-    margin-top: 10px; 
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-top: 10px;
 }
 
 .javaScriptPercent {
@@ -234,22 +281,22 @@ strong {
 }
 
 .percentage {
-    position: absolute; 
-    top: 50%; 
-    left: 50%; 
-    transform: translate(-50%, -50%); 
-    font-size: 16px; 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 16px;
     font-weight: bold;
 }
 
-.thirdSection{
+.thirdSection {
     display: flex;
     flex-direction: column;
     gap: 2rem;
     color: #ffffff;
 }
 
-.thirdSection > div{
+.thirdSection>div {
     display: flex;
     gap: 4rem;
     justify-content: center;
@@ -257,67 +304,94 @@ strong {
     flex-wrap: wrap;
 }
 
-.thirdSection > div p{
+.thirdSection>div p {
     max-width: 600px;
     color: white;
     text-align: justify;
 
 }
 
-.thirdSection > div .img-one,
+.thirdSection>div .img-one,
 .img-two,
 .img-three {
-width: 300px;
-height: 250px;
-border-radius: 10px;
+    width: 300px;
+    height: 250px;
+    border-radius: 10px;
 }
 
-
-.container {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    max-height: 10px;
-    z-index: 1; 
-}
-
-.bubbles {
-    position: relative;
+/* Fourth Section */
+.fourthSection {
+    background-color: #4fc3dc;
+    align-items: center;
+    justify-content: center;
     display: flex;
-    max-height: 10px;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
-.bubbles span {
-    position: relative;
-    width: 30px;
-    height: 30px;
-    background: #4fc3dc;
-    margin: 0 4px;
-    border-radius: 50%;
-    box-shadow: 0 0 0 10px #4fc3dc44,
-    0 0 50px #4fc3dc,
-    0 0 100px #4fc3dc;
-    animation: animate 15s linear infinite;
-    animation-duration: calc(125s / var(--i));
-}
-
-.bubbles span:nth-child(even) {
-    box-shadow: 0 0 0 10px #ff2d7544,
-    0 0 50px #ff2d75,
-    0 0 100px #ff2d75;
+.fourthSection {
+    padding: 20px;
+    background-color: #4fc3dc;
+    /* border-radius: 8px; */
+    /* max-width: 800px; */
+    margin: 20px auto;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    height: auto;
 
 }
 
-@keyframes animate{
-    0%
-    {
-        transform: translateY(100vh) scale(0);
-    }
-    100%
-    {
-        transform: translateY(-100vh) scale(1);
-    }
+.title {
+    text-align: center;
+    margin-bottom: 10px;
+    font-size: 24px;
+    color: #0c192c;
 }
+
+#my-projects-list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+/* Cards my projects */
+#my-projects-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.project-item {
+    background-color: #025ce4;
+    border-radius: 50%; 
+    width: 300px;
+    height: 300px; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: 15px; 
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+    overflow: hidden; 
+    cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    opacity: 0.5;
+}
+
+.project-item:hover {
+    transform: scale(1.1); 
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+    opacity: 1;
+}
+
+.project-item img {
+    border-radius: 10px; 
+    width: 25%; 
+    height: auto; 
+
+}
+
 
 
